# ClauseWise

./: .replit  README.md  ai_engine.py  app.py  auth.py  clausewise.db  database.py  document_parser.py  pyproject.toml  replit.md  requirements.txt  risk_engine.py  sample_contract.docx  sample_contract.txt  test_ai_system_comprehensive.py  test_export.docx  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-You-are-an-expert-AI-software-architect-Build-a-complete-end-to-end-project-named-ClauseWise--1757706355307_1757706355308.txt
components/: clause_viewer.py  risk_dashboard.py  ui_components.py
sample_data/: sample_contract.txt
