[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "openai>=1.107.1",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "plotly>=6.3.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "spacy>=3.8.7",
    "streamlit>=1.49.1",
]
